# studio-barlog-ctl

./: .gitignore  Cargo.toml  LICENSE  and-i-love-her.rpp  and-i-love-her.rpp-bak  reaper-session.qpwgraph  studio-barlog-ctl.txt.2023-07-31-09
src/: directory_shenanigans.rs  gst_viewer_dumper.rs  main.rs  process.rs  qpwgraph.rs  reaper.rs  rendering.rs  space_available_watcher.rs  state.rs  utils.rs  video_capture.rs
src/reaper/: reaper_web_client.rs
src/reaper_save_file_parser/: tests.rs
src/video_capture/: gstreamer_process.rs
src/video_capture/gstreamer_process/: low_level.rs
