[package]
name = "studio-barlog-ctl"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1.72"
byte-unit = "4.0.19"
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive", "env", "cargo"] }
color-eyre = "0.6.2"
crossterm = "0.26.1"
derive_more = "0.99.17"
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "b526fa3ebc248b1cf9b56c546f96bba87ce87655" }
dioxus-tui = { git = "https://github.com/DioxusLabs/dioxus", rev = "b526fa3ebc248b1cf9b56c546f96bba87ce87655" }
directories = "5.0.1"
enigo = "0.1.2"
eyre = "0.6.8"
future-utils = "0.12.1"
futures = "0.3.28"
glib = { version = "0.18.1", features = ["v2_78"] }
gstreamer = { version = "0.21.0", features = ["serde", "serde_bytes", "v1_24"] }
gstreamer-app = "0.21.0"
inquire = "0.6.2"
itertools = "0.11.0"
nix = "0.26.2"
nom = "7.1.3"
nom-supreme = "0.8.0"
once_cell = "1.18.0"
parking_lot = "0.12.1"
reaper-save-rs = { git = "https://github.com/Niedzwiedzw/reaper-save-rs", rev = "30ee3c13b17170ca95bc5e56e374ca5794d33366", version = "0.1.0" }
reqwest = { version = "0.11.18", features = [
  "stream",
  "socks",
  "rustls-tls-webpki-roots",
  "gzip",
  "trust-dns",
  "rustls-tls",
  "json",
  "serde_json",
  "mime_guess",
  # "native-tls",
], default-features = false }
serde = { version = "1.0.181", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
tempfile = { version = "3.7.0", features = ["nightly"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tui = "0.19.0"
